<resources>
    <string name="app_name">configuracaoPersonagem</string>
    <string name="titulo_seu_personagem">Crie seu personagem</string>
    <string name="label_nome_do_personagem">Nome do Personagem</string>
    <string name="label_sexo">Sexo</string>
    <string name="label_menino">É menino</string>
    <string name="label_menina">É menina</string>
    <string name="label_classe">classe</string>
    <string name="label_forca">Força</string>
    <string name="label_botao">Criar</string>
    <string name="Label_desenvolvido_por_ton">Desenvolvido por Ton</string>

    <string name="mago">Mago</string>
    <string name="guerreiro">Guerreiro</string>
    <string name="arqueiro">Arqueiro</string>
    <string name="barbo">Barbo</string>
    <string name="anao">Anão</string>
    <string name="elfo">Elfo</string>
</resources>
