<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonrm.configuracaopersonagem.PersonagemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cabecalho">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_seu_personagem"
            android:gravity="center"
            android:textSize="24sp"
            android:padding="16dp"
            android:textStyle="bold"/>

    </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/rodape"
            android:layout_below="@id/cabecalho">


            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_nome_do_personagem"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sexo"/>

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                 <RadioButton
                     android:id="@+id/rbMasculino"
                     android:layout_weight="0.5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/label_menino"/>


                    <RadioButton
                      android:id="@+id/rbfeminino"
                      android:layout_weight="0.5"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/label_menina"/>
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_classe"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/btCriar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_forca"/>
                <TextView
                    android:id="@+id/btbotoao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="0"/>

                <SeekBar
                    android:max="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_botao"/>




            </LinearLayout>


        </ScrollView>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rodape"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/Label_desenvolvido_por_ton"/>

    </RelativeLayout>

    </RelativeLayout>











